# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/NVIDIA/nvcf/src/compute-plane-services/nvca
# gazelle:proto disable_global
# gazelle:go_naming_convention import_alias

# Non-Go top-level dirs.
# gazelle:exclude docker
# gazelle:exclude deployments
# gazelle:exclude examples
# gazelle:exclude scripts
# gazelle:exclude test
# gazelle:exclude pipelines
# gazelle:exclude docs

# Bazel cannot consume the private nvcf-go module via go_deps (the
# fetched copy ships pre-generated BUILD.bazel files that load
# `@rules_go` -- invisible from inside the fetched module's bzlmod
# context -- and re-running Gazelle on the fetched copy does not fix
# the load). Resolve `github.com/NVIDIA/nvcf/src/libraries/go/lib`
# imports against the local `vendor/` tree instead. Gazelle generates
# BUILD.bazel files inside `vendor/github.com/NVIDIA/nvcf/` and the
# resolve directives below redirect each import path nvca uses.
#
# Everything else under vendor/ is excluded so Gazelle does not
# generate BUILD files for the public deps (which arrive via go_deps).
# gazelle:exclude vendor/cel.dev
# gazelle:exclude vendor/dario.cat
# gazelle:exclude vendor/golang.org
# gazelle:exclude vendor/gomodules.xyz
# gazelle:exclude vendor/google.golang.org
# gazelle:exclude vendor/go.opentelemetry.io
# gazelle:exclude vendor/gopkg.in
# gazelle:exclude vendor/go.uber.org
# gazelle:exclude vendor/go.yaml.in
# gazelle:exclude vendor/k8s.io
# gazelle:exclude vendor/sigs.k8s.io
# gazelle:exclude vendor/github.com/antithesishq
# gazelle:exclude vendor/github.com/antlr4-go
# gazelle:exclude vendor/github.com/aws
# gazelle:exclude vendor/github.com/beorn7
# gazelle:exclude vendor/github.com/blang
# gazelle:exclude vendor/github.com/bombsimon
# gazelle:exclude vendor/github.com/cenkalti
# gazelle:exclude vendor/github.com/cespare
# gazelle:exclude vendor/github.com/cpuguy83
# gazelle:exclude vendor/github.com/davecgh
# gazelle:exclude vendor/github.com/emicklei
# gazelle:exclude vendor/github.com/evanphx
# gazelle:exclude vendor/github.com/felixge
# gazelle:exclude vendor/github.com/fsnotify
# gazelle:exclude vendor/github.com/fxamacker
# gazelle:exclude vendor/github.com/go-jose
# gazelle:exclude vendor/github.com/golang-jwt
# gazelle:exclude vendor/github.com/go-logr
# gazelle:exclude vendor/github.com/google
# gazelle:exclude vendor/github.com/go-openapi
# gazelle:exclude vendor/github.com/gorilla
# gazelle:exclude vendor/github.com/go-viper
# gazelle:exclude vendor/github.com/grpc-ecosystem
# gazelle:exclude vendor/github.com/hashicorp
# gazelle:exclude vendor/github.com/imdario
# gazelle:exclude vendor/github.com/inconshreveable
# gazelle:exclude vendor/github.com/jmespath
# gazelle:exclude vendor/github.com/josharian
# gazelle:exclude vendor/github.com/json-iterator
# gazelle:exclude vendor/github.com/klauspost
# gazelle:exclude vendor/github.com/kylelemons
# gazelle:exclude vendor/github.com/mailru
# gazelle:exclude vendor/github.com/Masterminds
# gazelle:exclude vendor/github.com/Microsoft
# gazelle:exclude vendor/github.com/minio
# gazelle:exclude vendor/github.com/modern-go
# gazelle:exclude vendor/github.com/munnerz
# gazelle:exclude vendor/github.com/nats-io
# gazelle:exclude vendor/github.com/opencontainers
# gazelle:exclude vendor/github.com/pelletier
# gazelle:exclude vendor/github.com/pmezard
# gazelle:exclude vendor/github.com/prometheus
# gazelle:exclude vendor/github.com/russross
# gazelle:exclude vendor/github.com/sagikazarmark
# gazelle:exclude vendor/github.com/sirupsen
# gazelle:exclude vendor/github.com/sony
# gazelle:exclude vendor/github.com/sourcegraph
# gazelle:exclude vendor/github.com/spf13
# gazelle:exclude vendor/github.com/spiffe
# gazelle:exclude vendor/github.com/stoewer
# gazelle:exclude vendor/github.com/stretchr
# gazelle:exclude vendor/github.com/subosito
# gazelle:exclude vendor/github.com/undefinedlabs
# gazelle:exclude vendor/github.com/urfave
# gazelle:exclude vendor/github.com/x448
# gazelle:exclude vendor/github.com/xrash
# gazelle:exclude vendor/github.com/NVIDIA/k8s-dra-driver-gpu
# gazelle:exclude vendor/github.com/NVIDIA/KAI-scheduler

# Resolve nvcf-go subpackages against vendor/. One per import path
# found in nvca source. Re-run `bazel run //:gazelle` after adding new
# nvcf-go imports and add a matching directive here.
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/auth //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/auth
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/core //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/core
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/fnds/client //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/fnds/client
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/fnds/common/core/types //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/fnds/common/core/types
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/http //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/http
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/common //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/common
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/function //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/function
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/task //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/task
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/util //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/icms-translate/translate/util
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/imagecredential //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/imagecredential
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/nvkit/tracing //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/nvkit/tracing
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/oauth //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/oauth
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/otel //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/otel
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/secret //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/secret
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/types/nvca/config //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/types/nvca/config
# gazelle:resolve go github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/version //vendor/github.com/NVIDIA/nvcf/src/libraries/go/lib/pkg/version
gazelle(name = "gazelle")
