# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for nvca.

Multi-binary Go service. Nine binaries under cmd/: nvca, nvca-operator,
nvca-operator-cleanup, nvca-mirror, cluster-validator, discover-gpus,
export-cluster-pubkeys, spiffe-token-fetcher, webhook-server.

Vendored dependencies live in vendor/ for legacy `go build -mod=vendor`
flows. Bazel resolves deps via Gazelle's go_deps extension from go.mod
and ignores vendor/ (.bazelignore).

The umbrella nvcf/nvcf consumes this subtree under
src/compute-plane-services/nvca; this file is picked up there too, but the
umbrella's own root MODULE.bazel is what Bazel uses end-to-end. The umbrella's
go.work.bazel maps the private
nvcf-go submodule
(github.com/NVIDIA/nvcf/src/libraries/go/lib) to the umbrella's
//src/libraries/go/lib subtree, so the actual build + tests happen
inside the umbrella. The standalone-upstream Bazel CI in this repo
runs analysis-only (`bazel mod graph`, `bazel query`) -- enough to
verify MODULE.bazel parses and BUILD.bazel files declare what the
umbrella will consume.
"""

module(
    name = "nvcf_nvca",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch). Mirrors the umbrella's MODULE.bazel.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's `pkg_tar` runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root in the bazel-ci
# container, and rules_python rejects root-user setup by default
# (https://github.com/bazelbuild/rules_python/pull/713).
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Go
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.10")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Auto-managed by `bazel mod tidy`. Re-run after adding or removing
# imports in cmd/, internal/, or pkg/. The set is the transitive closure
# of go.mod.
# Keep additional vendored targets listed when `bazel build //...` needs
# them, even if `bazel mod tidy` classifies them as indirect.
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go",
    "com_github_bombsimon_logrusr_v4",
    "com_github_evanphx_json_patch_v5",
    "com_github_go_jose_go_jose_v3",
    "com_github_go_jose_go_jose_v4",
    "com_github_go_logr_logr",
    "com_github_google_cel_go",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_google_uuid",
    "com_github_gorilla_handlers",
    "com_github_gorilla_mux",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_hashicorp_golang_lru_v2",
    "com_github_imdario_mergo",
    "com_github_nats_io_nats_go",
    "com_github_nats_io_nats_server_v2",
    "com_github_nats_io_nkeys",
    "com_github_nvidia_k8s_dra_driver_gpu",
    "com_github_nvidia_kai_scheduler",
    "com_github_nvidia_nvcf_src_libraries_go_lib",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_run_ai_karta",
    "com_github_sirupsen_logrus",
    "com_github_sony_gobreaker_v2",
    "com_github_sourcegraph_conc",
    "com_github_spf13_cobra",
    "com_github_spiffe_go_spiffe_v2",
    "com_github_stretchr_testify",
    "com_github_undefinedlabs_go_mpatch",
    "com_github_urfave_cli_v2",
    "in_gopkg_inf_v0",
    "in_gopkg_yaml_v2",
    "in_gopkg_yaml_v3",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_client_go",
    "io_k8s_klog_v2",
    "io_k8s_kube_openapi",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_yaml",
    "io_k8s_utils",
    "io_opentelemetry_go_contrib_instrumentation_net_http_httptrace_otelhttptrace",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_x_time",
    "xyz_gomodules_jsonpatch_v2",
)

# ============================================================================
# Prebuilt protoc toolchain. Pulled transitively by k8s.io/api which
# declares proto_library targets. Without this, Bazel builds C++ protoc
# from source on every cold build. The service does not consume protoc
# directly; this exists purely to short-circuit the C++ compile.
# ============================================================================
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# Only the cross toolchain is registered; native arch uses host gcc.
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:2ae1c3f90de1735fefb2a951977b7e78aa1c691f345d58c87b0d6bb7eff4f4d5",
    image = "nvcr.io/nvidia/distroless/go:v4.0.6",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)

# ============================================================================
# tini – tiny init for containers (PID 1 signal forwarding + zombie reaping).
# One http_file per architecture; the OCI layer selects the right one via
# select() on @platforms//cpu so multi-arch image builds get the matching
# binary.
# ============================================================================
http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "tini_static_amd64",
    downloaded_file_path = "tini",
    executable = True,
    sha256 = "c5b0666b4cb676901f90dfcb37106783c5fe2077b04590973b885950611b30ee",
    urls = ["https://github.com/krallin/tini/releases/download/v0.19.0/tini-static-amd64"],
)

http_file(
    name = "tini_static_arm64",
    downloaded_file_path = "tini",
    executable = True,
    sha256 = "eae1d3aa50c48fb23b8cbdf4e369d0910dfc538566bfd09df89a774aa84a48b9",
    urls = ["https://github.com/krallin/tini/releases/download/v0.19.0/tini-static-arm64"],
)
