# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for nvcf-dns-cache.

Mirrors the canonical Phase B pattern from nvcf-grpc-proxy: standalone
Bazel module with full build + test + multi-arch OCI image packaging.
The umbrella nvcf/nvcf consumes this subtree as a synthetic import;
this file is also picked up there but the umbrella has its own root
MODULE.bazel.
"""

module(
    name = "nvcf_dns_cache",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch). Mirrors the umbrella's MODULE.bazel.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's `pkg_tar` runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root in the bazel-ci
# container, and rules_python rejects root-user setup by default
# (https://github.com/bazelbuild/rules_python/pull/713). Opt out so
# the OCI image layer can build in CI without demoting the job user.
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# Only the cross toolchain is registered; native arch uses host gcc.
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. urm.nvidia.com is JFrog Artifactory; its
# WWW-Authenticate response advertises a realm URL that does not match
# the scope the token is later checked against. rules_oci's downloader
# can't sniff WWW-Authenticate at runtime, so we hand-write the
# working challenge here. Reused verbatim from nvcf-grpc-proxy.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:6be4473eca4e8a5fdf8d7103a4d35708f5538bb5f7a58f0d12a257bdf362334f",
    image = "urm.nvidia.com/sw-gpu-ucs-hardened-docker/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    www_authenticate_challenges = {
        "urm.nvidia.com": "Bearer realm=\"https://urm.nvidia.com/artifactory/api/docker/null/v2/token\",service=\"urm.nvidia.com\",scope=\"repository:{repository}:pull\"",
    },
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_prometheus_client_golang", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_k8s_klog_v2")
