# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

"""nvsnap Bazel module definition.

Standalone repo: this module is NOT part of the NVCF umbrella
(nvcf/nvcf). It does not appear in the umbrella's imports.yaml.
All Bazel infrastructure lives here.
"""

module(
    name = "nvsnap",
    version = "0.0.1",
)

# ============================================================================
# Core platforms
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")

# rules_cc backs lib/nvsnap_intercept (libnvsnap_intercept.so) and
# lib/nvsnap_restore_helper (nvsnap-restore-helper). Transitively pulled
# in by rules_oci anyway; declared explicitly so the BUILD files
# under lib/ load `@rules_cc//cc:defs.bzl` against a pinned version.
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")

# rules_python is a transitive dependency of rules_pkg (its pkg_tar
# implementation runs a Python script). The hermetic Python fetch
# refuses to materialize the interpreter when Bazel is running as
# root unless `ignore_root_user_error = True` is set; the CI runner
# image runs as root, so the build fails without this override.
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# OCI containers (multi-arch). Used by rules/oci/defs.bzl go_oci_image.
# ============================================================================
bazel_dep(name = "rules_oci", version = "2.2.7")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Base images. ubuntu:22.04 for nvsnap-agent (criu integration is a
# follow-up; image is binary-only today). alpine:3.20 for nvsnap-server.
# nvsnap is amd64-only at runtime (GPU hosts). All oci.pull blocks
# below are scoped to linux/amd64 -- arm64 layers are NOT pulled and
# image targets are single-arch. hermetic_cc_toolchain (zig SDK) is
# intentionally NOT registered; the Bazel CI image
# (ci/Dockerfile.bazel) ships system gcc on ubuntu:22.04, which is
# the same glibc ABI as the nvsnap-agent runtime container, so C/C++
# targets link against the same runtime they ship into.
oci.pull(
    name = "distroless_static",
    digest = "sha256:dd7614b5a12bc4d617b223c588b4e0c833402b8f526c11e612b324a956cd2640",
    image = "gcr.io/distroless/static",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "ubuntu_22_04",
    digest = "sha256:0e5e4a57c2499249aafc3b40fcd541e9a456aab7296681a3994d631587203f97",
    image = "docker.io/library/ubuntu",
    platforms = ["linux/amd64"],
)
oci.pull(
    name = "alpine_3_20",
    digest = "sha256:beefdbd8a1da6d2915566fde36db9db0b524eb737fc57cd1367effd16dc0d06d",
    image = "docker.io/library/alpine",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "alpine_3_20",
    "alpine_3_20_linux_amd64",
    "distroless_static",
    "distroless_static_linux_amd64",
    "ubuntu_22_04",
    "ubuntu_22_04_linux_amd64",
)

# ============================================================================
# Go (rules_go + Gazelle, fed from go.mod)
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")

# Pin to 1.25.0 (matches the NVCF umbrella). The repo's go.mod
# declares 1.24.0 with toolchain 1.24.5; Bazel uses this hermetic
# SDK regardless and Gazelle's repository_tools require >= 1.24.12.
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
# Mark transitive deps with no source files for Gazelle. Filled by:
#   bazel mod tidy
# Run that whenever go.mod changes; commit the resulting go_deps.use_repo
# lines below.

use_repo(go_deps, "com_github_balajinvda_go_criu_v8", "com_github_containerd_containerd", "com_github_gorilla_mux", "com_github_gorilla_websocket", "com_github_opencontainers_runtime_spec", "com_github_pierrec_lz4_v4", "com_github_prometheus_client_golang", "com_github_sirupsen_logrus", "com_github_spf13_cobra", "com_github_vishvananda_netlink", "com_github_vishvananda_netns", "com_google_cloud_go_storage", "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_k8s_cri_api", "io_k8s_sigs_yaml", "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_exporters_otlp_otlptrace", "io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracegrpc", "io_opentelemetry_go_otel_sdk", "io_opentelemetry_go_otel_trace", "org_golang_google_api", "org_golang_google_grpc", "org_golang_google_protobuf", "org_golang_x_sync", "org_golang_x_sys", "org_modernc_sqlite")
