# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for nvcf-worker-task.

Single Go binary. Bazel resolves all deps via Gazelle's go_deps extension
from go.mod.

This file is also consumed when the service is synced as a subtree of the
NVCF umbrella repo (nvcf/nvcf), but the umbrella's own root MODULE.bazel
is what Bazel uses there. The umbrella reads this service's go.mod via
its own go_deps.from_file pointing at //src/compute-plane-services/worker-task:go.mod.
"""

module(
    name = "nvcf_worker_task",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch). Mirrors the umbrella's MODULE.bazel.
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")

# rules_pkg's `pkg_tar` runs through a Python builder, which pulls in
# rules_python's hermetic interpreter. CI runs as root in the bazel-ci
# container, and rules_python rejects root-user setup by default
# (https://github.com/bazelbuild/rules_python/pull/713).
bazel_dep(name = "rules_python", version = "1.7.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Go
# ============================================================================
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.48.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# The shared NVCF Go library (github.com/NVIDIA/nvcf/src/libraries/go/lib)
# ships pre-generated BUILD.bazel files that reference `@rules_go`. From
# inside the fetched module's bzlmod context that name does not resolve;
# force Gazelle to re-generate the module's BUILD.bazel files in this
# repo's bzlmod context so the references work.
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
    path = "github.com/NVIDIA/nvcf/src/libraries/go/lib",
)
go_deps.gazelle_override(
    build_file_generation = "clean",
    directives = ["gazelle:proto disable_global"],
    path = "github.com/NVIDIA/nvcf/src/libraries/go/worker",
)

# Auto-managed by `bazel mod tidy`. Re-run after adding new imports in
# cmd/ or imported shared packages. The list is generated from the transitive
# closure of go.mod.
use_repo(
    go_deps,
    "com_github_cenkalti_backoff_v4",
    "com_github_fsnotify_fsnotify",
    "com_github_go_viper_mapstructure_v2",
    "com_github_goccy_go_json",
    "com_github_google_uuid",
    "com_github_nvidia_nvcf_src_libraries_go_lib",
    "com_github_nvidia_nvcf_src_libraries_go_worker",
    "com_github_prometheus_client_golang",
    "com_github_samber_lo",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_valyala_bytebufferpool",
    "org_golang_google_grpc",
    "org_golang_x_sync",
    "org_uber_go_zap",
)

# ============================================================================
# Prebuilt protoc. Bazel 9 ships with protobuf >= 33.4 which bundles
# prebuilt protoc binaries. toolchains_protoc is archived and no longer
# needed. Just enable the flag to use prebuilt protoc instead of
# compiling from source.
# ============================================================================

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# Only the cross toolchain is registered; native arch uses host gcc.
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. urm.nvidia.com is JFrog Artifactory; its
# WWW-Authenticate response advertises a realm URL that does not
# match the scope the token is later checked against. rules_oci's
# downloader can't sniff WWW-Authenticate at runtime, so we hand-
# write the working challenge here.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_go",
    digest = "sha256:6be4473eca4e8a5fdf8d7103a4d35708f5538bb5f7a58f0d12a257bdf362334f",
    image = "urm.nvidia.com/sw-gpu-ucs-hardened-docker/distroless/go",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
    www_authenticate_challenges = {
        "urm.nvidia.com": "Bearer realm=\"https://urm.nvidia.com/artifactory/api/docker/null/v2/token\",service=\"urm.nvidia.com\",scope=\"repository:{repository}:pull\"",
    },
)
use_repo(
    oci,
    "distroless_go",
    "distroless_go_linux_amd64",
    "distroless_go_linux_arm64_v8",
)
