# SPDX-FileCopyrightText: Copyright (c) NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

"""Bzlmod module definition for rs-autoscaler.

Second Rust Phase B service. Single-crate Cargo workspace:
  crates/server/  -> server binary (consumes the Autoscaler service
                     definitions from nvcf.proto via tonic-build).

Tracks the canonical Phase B pattern from nvcf-invocation-service !313.
No AWS / S3 deps -- skips the aws-lc-sys crate_universe issue that
invocation-service had to work around. openssl-sys is built against
the system libssl via `crate.annotation` (see below); the `vendored`
cargo feature is OFF because the OpenSSL source-tree build under the
crate_universe sandbox fails to locate its own tarball. Trade-off:
single-arch (linux/amd64) only until per-platform libssl paths are
wired in.

The umbrella nvcf/nvcf consumes this subtree under
src/control-plane-services/function-autoscaler as a synthetic import;
this file is also picked up there but the umbrella's own root
MODULE.bazel is what Bazel uses end-to-end.
"""

module(
    name = "rs_autoscaler",
    version = "0.0.1",
)

# ============================================================================
# OCI containers (multi-arch).
# ============================================================================
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_oci", version = "2.2.7")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.19.3")
bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
bazel_dep(name = "rules_python", version = "1.4.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)

# ============================================================================
# Rust
# ============================================================================
bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.91.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crate.from_cargo(
    name = "rs_autoscaler_crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//crates/server:Cargo.toml",
    ],
    # Linux + macOS only. Skips Windows-only crates that would
    # otherwise be resolved into the graph and break Linux builds.
    # Same caveat as nvcf-invocation-service.
    supported_platform_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
        "x86_64-apple-darwin",
        "aarch64-apple-darwin",
    ],
)

# openssl-sys's build script normally calls pkg-config or expects
# OPENSSL_DIR/OPENSSL_LIB_DIR/OPENSSL_INCLUDE_DIR. Under the Bazel
# sandbox neither pkg-config nor env-based discovery work out of the
# box, so feed it explicit paths to the system libssl. The bazel-ci
# CI image installs libssl-dev (Ubuntu 24.04 default layout); dev
# machines on Linux with build-essential get the same. macOS dev
# machines need Homebrew openssl@3 -- if anyone hits this, point
# OPENSSL_LIB_DIR/OPENSSL_INCLUDE_DIR at /opt/homebrew/opt/openssl@3
# via user.bazelrc or a wrapper.
crate.annotation(
    build_script_env = {
        "OPENSSL_LIB_DIR": "/usr/lib/x86_64-linux-gnu",
        "OPENSSL_INCLUDE_DIR": "/usr/include",
        "OPENSSL_NO_VENDOR": "1",
    },
    crate = "openssl-sys",
)
use_repo(crate, "rs_autoscaler_crates")

# ============================================================================
# Prebuilt protoc toolchain. crates/server/build.rs feeds nvcf.proto
# through tonic-build; we override its protoc with the one Bazel
# fetches via toolchains_protoc so the build is hermetic instead of
# relying on protoc_bin_vendored at runtime.
# ============================================================================
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    google_protobuf = "com_google_protobuf",
    version = "v29.0",
)

bazel_dep(name = "protobuf", version = "29.1", repo_name = "protobuf")

# ============================================================================
# C++ cross-compilation (multi-arch container builds).
# ============================================================================
zig = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
use_repo(zig, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain:linux_arm64_gnu.2.38",
)

# ============================================================================
# OCI base image. Rust + openssl-sys (vendored) dynamically link to
# glibc, so distroless/cc (which ships libc) is required.
# ============================================================================
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:80e21701e5253088ee8ca22f2ad8fc5d08ca5bf730a6eea5d68ea268c33e9831",
    image = "nvcr.io/nvidia/distroless/cc",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64",
)
